--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!--SCRIPTS-->
 
-    <title>The Castle - Ottershaw - Home</title>
+    <title>Spice Villa - Home</title>
   </head>
   <body>
 
@@ -56,21 +56,14 @@
                     <a href="gallery.html"><button class="btn menu-buttons bg-none"><i class="fa fa-camera"></i> Gallery</button></a>
                 </div>
                 <div class="col-xs-12">
-                    <a href="pubtour.html"><button class="btn menu-buttons bg-none"><i class="fa fa-eye"></i> Live Pub Tour</button></a>
-                </div>
-                <div class="col-xs-12">
                     <a href="about.html"><button class="btn menu-buttons bg-none"><i class="fa fa-info-circle"></i> About Us</button></a>
                 </div>
                 <div class="col-xs-12">
                     <a href="contact.html"><button class="btn menu-buttons bg-none"><i class="fa fa-envelope-open-text"></i> Contact Us</button></a>
                 </div>
                 <div class="col-xs-12">
-                    <a href="covid.html"><button class="btn menu-buttons bg-none"><i class="fa fa-shield-virus"></i> Covid 19</button></a>
-                </div>
-                <div class="col-xs-12">
-                    <a href="https://www.facebook.com/castleinottershaw/" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-facebook-f"></i></button></a>
-                    <a href="https://www.instagram.com/thecastleottershaw" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-instagram"></i></button></a>
-                    <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g609070-d3664065-Reviews-The_Castle-Ottershaw_Surrey_England.html" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-tripadvisor"></i></button></a>
+                    <a href="https://www.facebook.com/SpiceVillaChard" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-facebook-f"></i></button></a>
+                    <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g667388-d3507180-Reviews-Spice_Villa-Chard_Somerset_England.html" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-tripadvisor"></i></button></a>
                 </div>
             </div>
     </section>
