--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <nav class="nav-bar justify-content-center">
             <div class="row">
                 <div class="title mx-auto tac">
-                                        <a href="index.html"><div id="thecastlelogo" style="background: url('assets/img/thecastle.png'); background-size: contain; background-repeat: no-repeat;"></div></a>
+                                        <a href="index.html"><div id="thecastlelogo" style="background: url('assets/img/spicevilla.png'); background-size: contain; background-repeat: no-repeat;"></div></a>
                     <!--<img src="assets/img/thecastle.png" alt="The Castle">-->
                 </div>
             </div>
