--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
     <section class="parralax-imaging">
         <div class="front-page-img">
-            <div class="parralax background-fade front-page-img-cover" style="border-bottom: 3px solid goldenrod;">
+            <div class="parralax background-fade front-page-img-cover" style="border-bottom: 3px solid #db9c39;">
                 <div class="tac welcome-text-parr">
                     <div class="welcome cinzel" style="padding: 10px;"><i class="fad fa-chess" style="font-size: 30px;"></i> Welcome To The Castle <i class="fad fa-chess fa-flip-horizontal" style="font-size: 30px;"></i></div>
                     <div class="welcomesub cinzel">We look forward to welcoming you to The Castle.</div>
