--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="welcome cinzel" style="padding: 10px;"><i class="fad fa-user-chef" style="font-size: 30px;"></i> Welcome To Spice Villa <i class="fad fa-user-chef fa-flip-horizontal" style="font-size: 30px;"></i></div>
                     <div class="welcomesub cinzel">We look forward to welcoming you...</div>
                     <div class="welcomesubtwo cinzel">Serving the best traditional Indian cuisine!</div>
-                    <div class=""><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i></i></div>
+                    <div class=""><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i></div>
                 </div>
             </div>
         </div>
