--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="front-page-img">
             <div class="parralax background-fade front-page-img-cover" style="border-bottom: 3px solid #db9c39;">
                 <div class="tac welcome-text-parr">
-                    <div class="welcome cinzel" style="padding: 10px;"><i class="fad fa-user-chef" style="font-size: 30px;"></i> Welcome To Spice Villa <i class="fad fa-user-chef fa-flip-horizontal" style="font-size: 30px;"></i></div>
+                    <div class="welcome cinzel" style="padding: 10px;">Welcome To Spice Villa</div>
                     <div class="welcomesub cinzel">We look forward to welcoming you...</div>
                     <div class="welcomesubtwo cinzel">Serving the best traditional Indian cuisine!</div>
                     <div class=""><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i><i class="fad fa-star" style="color: #db9c39; font-size: 40px; margin: 10px;"></i></div>
