--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
         <div class="row">
             <div class="col-12 col-md-6 minititle cinzel tac">
                 <img src="assets/img/castleimg.png" alt="The Castle Logo" style="margin-right: auto; margin-left: auto; width: 100px;">
-                <h1 class="tac">The Castle</h1>
+                <h1 class="tac">Spice Villa</h1>
             </div>
             <div class="col-12 col-md-6 minidesc sans">
-                <p>The Castle is a charming traditional pub set in the Surrey village of Ottershaw. We are proud to offer you a warm welcome; homemade food; a fine range of Cask Marque accredited ales; wines; spirits and soft drinks with a friendly and efficient service.
-We are open all day every day for drinks. Our kitchen closes 5pm on Sunday and re-opens at 6pm on Wednesday.</p><br>
+                <p>Fully licensed authentic Asain restaurant & takeaway - Free home delivery within 3 mile radius, minimum order £20 - open 6 days a week including bank holidays.</p><br>
                 <a href="history.html"><button class="btn miniaboutbtn">History Of The Castle</button></a><br><br>
                 <a href="covid.html"><button class="btn miniaboutbtn" style="margin-bottom: 50px;">Covid-19 Safety</button></a>
             </div>
