--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="background-fade img-box" style="height:100%;">
                      <div class="cinzel padding-for-img-box">
                         <a href="menu.html" style="color: white; text-decoration: none;">
-                            <p class="button-boxes-padded">FOOD</p>
+                            <p class="button-boxes-padded">MENU</p>
                         </a>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                 <div class="background-fade img-box" style="height:100%;">
                     <div class="cinzel padding-for-img-box">
                         <a href="beersandwines.html" style="color: white; text-decoration: none;">
-                            <p class="button-boxes-padded">DRINK</p>
+                            <p class="button-boxes-padded">BOOKING</p>
                         </a>
                     </div>
                 </div>
