--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
         <div class="row">
             <div class="maps col-12 col-md-6 tac sans">
-                <p class="address">222 Brox Rd, Ottershaw, Chertsey KT16 0LW</p>
-                <iframe id="gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2491.4656404065936!2d-0.5351266842355116!3d51.35773597961077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487677c496470c43%3A0xa5bfdc2d618b5d3e!2sThe%20Castle%20Inn!5e0!3m2!1sen!2suk!4v1596200980263!5m2!1sen!2suk" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <p class="address">19 High St, Chard TA20 1QF</p>
+                <iframe id="gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2517.767769454839!2d-2.971203577581954!3d50.87249890888354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48727692834657d1%3A0xbf24c5a0baa469aa!2sSpice%20Villa!5e0!3m2!1sen!2suk!4v1652260883727!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="minigallery d-none d-md-block col-md-6">
                 <div class="row" style="height: 50%;">
