--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
     </section>
 
     <footer>
-        <div class="tac cardo" style="background-color: black; color: white;">
-            <span>Copyright 2020 DanCodes.co.uk <i class="fa fa-copyright"></i></span><br>
-            <img src="assets/img/dancodes.png" style="width:25px; margin-bottom: 5px;"/>
+        <div class="tac cardo" style="background-color: #3d1436; color: white;">
+            <span>Copyright 2022 Time at the Bar <i class="fa fa-copyright"></i></span><br>
+            <img src="assets/img/tabimg-invert 3.png" style="width:25px; margin-bottom: 5px;"/>
         </div>
     </footer>
 
