--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
     <section class="thecastlemini" style="margin-top: 25px;">
         <div class="row">
             <div class="col-12 col-md-6 minititle cinzel tac">
-                <img src="assets/img/castleimg.png" alt="The Castle Logo" style="margin-right: auto; margin-left: auto; width: 100px;">
+                <img src="assets/img/spicevilla.png" alt="The Spice Villa Logo" style="margin-right: auto; margin-left: auto; width: 100px;">
                 <h1 class="tac">Spice Villa</h1>
             </div>
             <div class="col-12 col-md-6 minidesc sans">
                 <p>Fully licensed authentic Asain restaurant & takeaway - Free home delivery within 3 mile radius, minimum order £20 - open 6 days a week including bank holidays.</p><br>
-                <a href="history.html"><button class="btn miniaboutbtn">History Of The Castle</button></a><br><br>
-                <a href="covid.html"><button class="btn miniaboutbtn" style="margin-bottom: 50px;">Covid-19 Safety</button></a>
+                <a href="about.html"><button class="btn miniaboutbtn">About Us</button></a><br><br>
+                <a href="contact.html"><button class="btn miniaboutbtn" style="margin-bottom: 50px;">Contact Us</button></a>
             </div>
         </div>
     </section>
