--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="col-12 col-md-2 img-box-setup img-drink-area">
                 <div class="background-fade img-box" style="height:100%;">
                     <div class="cinzel padding-for-img-box">
-                        <a href="beersandwines.html" style="color: white; text-decoration: none;">
+                        <a href="booking.html" style="color: white; text-decoration: none;">
                             <p class="button-boxes-padded">BOOKING</p>
                         </a>
                     </div>
