--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
                     <a href="menu.html"><button class="btn menu-buttons bg-none"><i class="fa fa-hat-chef"></i> Menu</button></a>
                 </div>
                 <div class="col-xs-12">
-                    <a href="beersandwines.html"><button class="btn menu-buttons bg-none"><i class="fa fa-wine-bottle"></i> Beers & Wines</button></a>
-                </div>
-                <div class="col-xs-12">
                     <a href="gallery.html"><button class="btn menu-buttons bg-none"><i class="fa fa-camera"></i> Gallery</button></a>
                 </div>
                 <div class="col-xs-12">
@@ -64,6 +61,9 @@
                 </div>
                 <div class="col-xs-12">
                     <a href="contact.html"><button class="btn menu-buttons bg-none"><i class="fa fa-envelope-open-text"></i> Contact Us</button></a>
+                </div>
+                <div class="col-xs-12">
+                    <a href="booking.html"><button class="btn menu-buttons bg-none"><i class="fa fa-table-picnic"></i></i> Book a Table</button></a>
                 </div>
                 <div class="col-xs-12">
                     <a href="https://www.facebook.com/SpiceVillaChard" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-facebook-f"></i></button></a>
