--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="contact.html"><button class="btn menu-buttons bg-none"><i class="fa fa-envelope-open-text"></i> Contact Us</button></a>
                 </div>
                 <div class="col-xs-12">
-                    <a href="booking.html"><button class="btn menu-buttons bg-none"><i class="fa fa-table-picnic"></i></i> Book a Table</button></a>
+                    <a href="booking.html"><button class="btn menu-buttons bg-none"><i class="fa-solid fa-table-picnic"></i></i> Book a Table</button></a>
                 </div>
                 <div class="col-xs-12">
                     <a href="https://www.facebook.com/SpiceVillaChard" target="_blank"><button class="btn menu-buttons-brand bg-none"><i class="fab fa-facebook-f"></i></button></a>
