--- a/menu.html
+++ b/menu.html
@@ -75,6 +75,7 @@
         <div class="menu tac cinzel">
             <div style="margin: 15px; font-size: 36px;">Our Menu</div>
             <i class="fab fa-vuejs veg"></i> - VEGETARIAN
+            <i class="fa-solid fa-pepper-hot spice"></i></i> - SPICY
         </div>
 
 
