--- a/menu.html
+++ b/menu.html
@@ -72,7 +72,7 @@
                    </div>
                </div>
        </section>
-        <div class="menu tac cinzel">
+        <div class="menu tac cinzel" style="color:wheat;">
             <div style="margin: 15px; font-size: 36px;">Our Menu</div>
             <i class="fab fa-vuejs veg"></i> - VEGETARIAN
             <i class="fa-solid fa-pepper-hot spice"></i></i> - SPICY
