--- a/booking.html
+++ b/booking.html
@@ -51,7 +51,7 @@
                     <a href="index.html"><button class="btn menu-buttons bg-none"><i class="fa fa-cutlery"></i> Home</button></a>
                 </div>
                 <div class="col-xs-12">
-                    <a href="menu.html"><button class="btn menu-buttons bg-none"><i class="fa fa-hat-chef"></i> Menu</button></a>
+                    <a href="menu.pdf"><button class="btn menu-buttons bg-none"><i class="fa fa-hat-chef"></i> Menu</button></a>
                 </div>
                 <div class="col-xs-12">
                     <a href="gallery.html"><button class="btn menu-buttons bg-none"><i class="fa fa-camera"></i> Gallery</button></a>
