--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="index.html"><button class="btn menu-buttons bg-none"><i class="fa fa-cutlery"></i> Home</button></a>
                 </div>
                 <div class="col-xs-12">
-                    <a href="menu.html"><button class="btn menu-buttons bg-none"><i class="fa fa-hat-chef"></i> Menu</button></a>
+                    <a href="menu.pdf"><button class="btn menu-buttons bg-none"><i class="fa fa-hat-chef"></i> Menu</button></a>
                 </div>
                 <div class="col-xs-12">
                     <a href="gallery.html"><button class="btn menu-buttons bg-none"><i class="fa fa-camera"></i> Gallery</button></a>
@@ -105,7 +105,7 @@
             <div class="col-12 col-md-2 img-box-setup img-food-area">
                 <div class="background-fade img-box" style="height:100%;">
                      <div class="cinzel padding-for-img-box">
-                        <a href="menu.html" style="color: white; text-decoration: none;">
+                        <a href="menu.pdf" style="color: white; text-decoration: none;">
                             <p class="button-boxes-padded">MENU</p>
                         </a>
                     </div>
