--- a/gallery.html
+++ b/gallery.html
@@ -83,27 +83,22 @@
 
     <div class="col-lg-3 col-md-4 col-6">
       <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="assets/img/index/1.png" alt="">
+            <img class="img-fluid img-thumbnail" src="assets/img/gallery1.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="assets/img/index/2.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="assets/img/gallery2.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="assets/img/index/3.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="assets/img/gallery3.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="assets/img/index/4.jpg" alt="">
-          </a>
-    </div>
-    <div class="col-lg-3 col-md-4 col-6">
-      <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="assets/img/index/5.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="assets/img/gallery4.jpg" alt="">
           </a>
     </div>
 
