--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
     <section class="gallery">
         <div class="container">
 
-  <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0 cinzel">Gallery</h1>
+  <h1 class="font-weight-light text-center text-lg-left mt-4 mb-0 cinzel" style="color:wheat;">Gallery</h1>
 
   <hr class="mt-2 mb-5">
 
