--- a/contact.html
+++ b/contact.html
@@ -75,20 +75,20 @@
 
     <section>
         <div class="contact tac" style="margin: 20px;">
-            <h1 class="cinzel">Contact Us</h1>
+            <h1 class="cinzel" style="color:wheat;">Contact Us</h1>
             <div class="row">
                 <div class="col-12 col-md-6">
-                <a style="text-decoration: none;" href="tel:01932 872373"><h3><i style="color: #b49a69" class="fa fa-phone"></i><h3>
-                <h3 style="color: black;">01932 872373</h3></a>
+                <a style="text-decoration: none;" href="tel:01460 64025"><h3><i style="color: #b49a69" class="fa fa-phone"></i><h3>
+                <h3 style="color: wheat;">01460 64025</h3></a>
                 </div>
                 <div class="col-12 col-md-6 email-block">
-                <a style="text-decoration: none;" href="mailto:welcome@the-castle-ottershaw.co.uk"><h3><i style="color: #b49a69" class="fa fa-envelope"></i><h3>
-                <h3 style="color: black;">welcome@the-castle-ottershaw.co.uk</h3></a>
+                <a style="text-decoration: none;" href="mailto:welcome@thespicevilla.com"><h3><i style="color: #b49a69" class="fa fa-envelope"></i><h3>
+                <h3 style="color: wheat;">welcome@thespicevilla.com</h3></a>
                 </div>
             </div>
         </div>
         <hr>
-        <div class="col-12 col-md-6 offset-md-3 contact-form tac cardo" style="margin-bottom: 15px;">
+        <div class="col-12 col-md-6 offset-md-3 contact-form tac cardo" style="color:wheat; margin-bottom: 15px;">
             <form action="https://formspree.io/mvowldnj" method="POST">
                 <div class="form-group">
                     <label for="fullname">Full Name</label>
