--- a/about.html
+++ b/about.html
@@ -75,72 +75,17 @@
 
     <section>
         <div class="about tac cinzel">
-            <br>
-            <div class="about-ownership col-12">
-                <h4>Meet The Team</h4>
-                <div class="row">
-                    <div class="col-12 col-md-4 iain">
-                        <p style="font-size:20px;">IAIN</p>
-                        <p>Joined Nov 2018</p>
-                        <div class="img-box" style="height:250px; background-color: grey; width: 50%; margin-left: auto; margin-right: auto;">IMAGE</div>
-                    </div>
-                    <div class="col-12 col-md-4 josie">
-                        <p style="font-size:20px;">JOSIE</p>
-                        <p>Joined Nov 2018</p>
-                        <div class="img-box" style="height:250px; background-color: grey; width: 50%; margin-left: auto; margin-right: auto;">IMAGE</div>
-                    </div>
-                    <div class="col-12 col-md-4 history-btn">
-                        <div class="history-btn-seperator">
-                            <p style="font-size: 26px;"><i style="color:#b49a69;" class="fa fa-clock"></i></p>
-                            <a href="history.html"><button class="btn btn-default">VIEW OUR HISTORY</button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
             <div class="about-basic col-12 col-md-6 offset-md-3 cardo">
-                    <div class="col-12 tac" style="font-size: 18px;">
-                        <p>The Castle is a charming traditional pub set in the Surrey village of Ottershaw. We are proud to offer you a warm welcome; homemade food; a fine range of Cask Marque accredited ales; wines; spirits and soft drinks with a friendly and efficient service.</p>
+                    <div class="col-12 tac" style="font-size: 18px; color: wheat;">
+                        <p>The Spice Villa</p>
                     </div><hr>
                     <div class="col-12 tac">
-                        <p class="wifi-notice" style="font-size: 26px;"><i style="color:#b49a69;" class="fa fa-wifi"></i> FREE WIFI INSIDE</p>
+                        <p class="wifi-notice" style="font-size: 26px;"><i style="color:#db9c39;" class="fa fa-wifi"></i> FREE WIFI INSIDE</p>
                     </div><hr>
                     <div class="col-12 tac">
                         <h3>Opening Hours</h3>
-                        <p>Due to the ongoing Covid situation we have changed our opening times.</p><br>
+                        <p>DUE TO THIS AND THAT</p><br>
 
-<!--BAR COLLAPSE-->
-                        <div class="card">
-                            <a class="btn btn-default" style="color: black;" data-toggle="collapse" href="#bardays" role="button" aria-expanded="false" aria-controls="bardays">
-                                <div class="card-body">
-                                    <h4><i style="font-size: 20px; color:#b49a69;" class="fa fa-beer fa-flip-horizontal"></i> Bar <i style="font-size: 20px; color:#b49a69;" class="fa fa-beer"></i></h4>
-                                </div>
-                            </a>
-                        </div>
-<!--BAR DAYS-->
-                        <div class="collapse" id="bardays">
-                            <div class="card card-body" style="color: red; width: 100%">
-                                    Monday<br><hr>CLOSED
-                            </div>
-                            <div class="card card-body" style="color: black; width: 100%">
-                                    Tuesday<br><hr>5pm - 10pm
-                            </div>
-                            <div class="card card-body" style="color: black; width: 100%">
-                                    Wednesday<br><hr>12pm - 10pm
-                            </div>
-                            <div class="card card-body" style="color: black; width: 100%">
-                                    Thursday<br><hr>12pm - 10pm
-                            </div>
-                            <div class="card card-body" style="color: black; width: 100%">
-                                    Friday<br><hr>12pm - Midnight
-                            </div>
-                            <div class="card card-body" style="color: black; width: 100%">
-                                    Saturday<br><hr>12pm - 11pm
-                            </div>
-                            <div class="card card-body" style="color: black; width: 100%">
-                                    Sunday<br><hr>12pm - 7pm
-                            </div>
-                        </div><br>
 
 <!--KITCHEN COLLAPSE-->
                         <div class="card">
