--- a/about.html
+++ b/about.html
@@ -97,26 +97,26 @@
                         </div>
 <!--KITCHEN DAYS-->
                         <div class="collapse" id="kitchendays">
-                            <div class="card card-body" style="color: red; width: 100%">
-                                    Monday<br><hr>CLOSED
+                            <div class="card card-body" style="color: black; width: 100%">
+                                    Monday<br><hr>12:00 - 14:00 / 17:00 - 23:00
                             </div>
                             <div class="card card-body" style="color: red; width: 100%">
                                     Tuesday<br><hr>CLOSED
                             </div>
                             <div class="card card-body" style="color: black; width: 100%">
-                                    Wednesday<br><hr>6pm - 9pm
+                                    Wednesday<br><hr>12:00 - 14:00 / 17:00 - 23:00
                             </div>
                             <div class="card card-body" style="color: black; width: 100%">
-                                    Thursday<br><hr>12pm - 9pm
+                                    Thursday<br><hr>12:00 - 14:00 / 17:00 - 23:00
                             </div>
                             <div class="card card-body" style="color: black; width: 100%">
-                                    Friday<br><hr>12pm - 9pm
+                                    Friday<br><hr>12:00 - 14:00 / 17:00 - 23:00
                             </div>
                             <div class="card card-body" style="color: black; width: 100%">
-                                    Saturday<br><hr>12pm - 9pm
+                                    Saturday<br><hr>12:00 - 14:00 / 17:00 - 23:00
                             </div>
                             <div class="card card-body" style="color: black; width: 100%">
-                                    Sunday<br><hr>12pm - 5pm
+                                    Sunday<br><hr>12:00 - 14:00 / 17:00 - 23:00
                             </div>
                         </div>
                         
