--- a/about.html
+++ b/about.html
@@ -77,14 +77,14 @@
         <div class="about tac cinzel">
             <div class="about-basic col-12 col-md-6 offset-md-3 cardo">
                     <div class="col-12 tac" style="font-size: 18px; color: wheat;">
-                        <p>The Spice Villa</p>
+                        <p>The Spice Villa is...</p>
                     </div><hr>
                     <div class="col-12 tac">
                         <p class="wifi-notice" style="font-size: 26px;"><i style="color:#db9c39;" class="fa fa-wifi"></i> FREE WIFI INSIDE</p>
                     </div><hr>
                     <div class="col-12 tac">
                         <h3>Opening Hours</h3>
-                        <p>DUE TO THIS AND THAT</p><br>
+                        <br>
 
 
 <!--KITCHEN COLLAPSE-->
