--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
    </section>
 
     <section>
-        <div class="about tac cinzel">
+        <div class="about tac cinzel" style="color: wheat;">
             <div class="about-basic col-12 col-md-6 offset-md-3 cardo">
                     <div class="col-12 tac" style="font-size: 18px; color: wheat;">
                         <p>The Spice Villa is...</p>
@@ -124,8 +124,8 @@
                     </div>
             </div>
             <hr>
-            <div class="col-12 offering cardo">
-                <p style="font-size: 20px;">Check out our <a href="https://www.facebook.com/castleinottershaw/" target="_blank" style="text-decoration: none;"><i class="fab fa-facebook"></i> Facebook page</a> for updates, offers and events.</p>
+            <div class="col-12 offering cardo" style="color:wheat;">
+                <p style="font-size: 20px;">Check out our <a href="https://www.facebook.com/SpiceVillaChard/" target="_blank" style="text-decoration: none;"><i class="fab fa-facebook"></i> Facebook page</a> for updates, offers and events.</p>
             </div><br>
         </div>
     </section>
